--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,9 +112,6 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp",
-        "__functional_base_03": "cpp",
-        "format": "cpp",
-        "stop_token": "cpp"
+        "xutility": "cpp"
     }
 }
