--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -25,7 +25,7 @@ on:
     branches: master
 env:
   module_id: qonsistentsabercolors
-  qmod_name: QonsistenSaberColors
+  qmod_name: QonsistentSaberColors
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -77,7 +77,7 @@ jobs:
       - name: Build & Create Qmod
         run: |
           cd ${GITHUB_WORKSPACE}
-          qpm s qmod
+          qpm qmod zip
       - name: Get Library Name
         id: libname
         run: |
